<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="general_category"
        app:title="@string/general_settings">

    </PreferenceCategory>

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/notification_settings">

    </PreferenceCategory>

    <PreferenceCategory
        app:key="account_category"
        app:title="@string/account_settings">

        <Preference
            app:key="clear_saved_login"
            app:title="@string/clear_saved_login"
            app:summary="@string/clear_saved_login_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="about_category"
        app:title="@string/about">

        <Preference
            app:key="tos"
            app:title="@string/tos"
            app:summary="@string/tos_summary"
        />
        <Preference
            app:key="contact"
            app:title="@string/contact"
            app:summary = "@string/contact_summary"
        />
    </PreferenceCategory>


</PreferenceScreen>