<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".CheckLendRequest"
	android:padding="@dimen/usual_margin">
	<Space
		android:id="@+id/user_history_spacer"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="@id/user_history"
		android:layout_width="0dp"
		android:layout_height="0dp" />
	<Button
		android:id="@+id/user_history"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/user_history"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/user_history_spacer"
		app:layout_constraintBottom_toTopOf="@id/user_history_spacer2"/>
	<Space
		android:id="@+id/user_history_spacer2"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintLeft_toLeftOf="@id/user_history"
		app:layout_constraintBottom_toBottomOf="@id/request_date"
		app:layout_constraintRight_toRightOf="parent"/>
	<TextView
		android:id="@+id/username"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/user_history"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_width="0dp"
		android:textSize="15sp"
		android:textColor="@color/ListTextColor"
		android:layout_margin="@dimen/usual_margin"
		android:layout_height="wrap_content"
		android:text="@string/username_id"/>
	<TextView
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/user_history"
		app:layout_constraintTop_toBottomOf="@id/username"
		android:id="@+id/request_date"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/date_of_request"
		android:layout_margin="@dimen/usual_margin"/>
	<Space
		android:id="@+id/spacer"
		android:layout_width="match_parent"
		android:layout_height="@dimen/login_spacer_height"
		app:layout_constraintTop_toBottomOf="@id/user_history_spacer2"/>

	<android.support.constraint.ConstraintLayout
		app:layout_constraintTop_toBottomOf="@id/spacer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/check_image_background_color">
		<android.support.constraint.ConstraintLayout
			android:id="@+id/image_constraint"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/check_image_background_color">
			<ImageView
				android:id="@+id/image"
				android:layout_margin="@dimen/login_edittext_horizontal_margin"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_width="match_parent"
				android:layout_height="@dimen/check_image_height"
				android:src="@drawable/cuteaf"
				android:contentDescription="@string/image_description" />
		</android.support.constraint.ConstraintLayout>
		<TextView
			android:id="@+id/name"
			app:layout_constraintTop_toBottomOf="@id/image_constraint"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/usual_margin"
			android:text=""
			android:textSize="30sp"/>

		<TextView
			android:id="@+id/amount"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@id/name"
			android:layout_margin="@dimen/usual_margin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/amount_value"/>

		<Button
			android:id="@+id/decline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/amount"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/decline"
			android:textAllCaps="false"
			android:background="#0000"/>
		<Button
			android:id="@+id/accept"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/amount"
			app:layout_constraintLeft_toRightOf="@id/decline"
			android:text="@string/accept"
			android:textColor="@color/colorPrimary"
			android:textAllCaps="false"
			android:background="#0000"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>