<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout4"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Fragments.AddProductFragment">

	<TextView
		android:id="@+id/product_id_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/usual_margin"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/new_product_id"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/product_id"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/usual_margin"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_id_text" />

	<TextView
		android:id="@+id/product_name_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/usual_margin"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/new_product_name"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_id" />

	<EditText
		android:id="@+id/product_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/usual_margin"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_name_text" />

	<TextView
		android:id="@+id/product_cat_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/usual_margin"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/new_product_cat"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_name" />

	<Spinner
		android:id="@+id/product_cat"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/product_cat_text" />

	<TextView
		android:id="@+id/product_man_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/usual_margin"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/new_product_man"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_cat" />

	<EditText
		android:id="@+id/product_man"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/usual_margin"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_man_text" />

	<TextView
		android:id="@+id/product_des_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/usual_margin"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/new_product_des"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_man" />

	<EditText
		android:id="@+id/product_des"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_margin="@dimen/usual_margin"
		android:inputType="textMultiLine"
		app:layout_constraintBottom_toTopOf="@id/buttonPanel"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/product_des_text" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/buttonPanel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/fab_margin"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent">

		<Button
			android:id="@+id/add_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/change_image"
			app:layout_constraintBottom_toTopOf="@id/spacer"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Space
			android:id="@+id/spacer"
			android:layout_width="match_parent"
			android:layout_height="@dimen/usual_margin"
			app:layout_constraintBottom_toTopOf="@id/add_product"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" />

		<Button
			android:id="@+id/add_product"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_product"
			app:layout_constraintBottom_toTopOf="@id/spacer"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>