<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout3"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Fragments.ProductInfoFragment">

	<ImageView
		android:id="@+id/image"
		android:layout_width="match_parent"
		android:layout_height="@dimen/info_image_height"
		android:layout_margin="@dimen/info_image_margin"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/lower-button-holder"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/image">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<!--TODO: change the value for each block-->
			<TextView
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/product_name"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/name_val"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"/>

			<TextView
				android:id="@+id/product_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/product_id"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/name" />

			<TextView
				android:id="@+id/product_id_val"
				app:layout_constraintTop_toBottomOf="@id/name"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"/>

			<TextView
				android:id="@+id/category"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/product_cat"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/product_id" />

			<TextView
				android:id="@+id/category_val"
				app:layout_constraintTop_toBottomOf="@id/product_id"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"/>

			<TextView
				android:id="@+id/product_man"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/product_man"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/category" />

			<TextView
				android:id="@+id/product_man_val"
				app:layout_constraintTop_toBottomOf="@id/category"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"/>

			<TextView
				android:id="@+id/description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/product_des"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/product_man" />
			<TextView
				android:id="@+id/description_val"
				app:layout_constraintTop_toBottomOf="@id/description"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin" />

			<TextView
				android:id="@+id/availability"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"
				android:text="@string/available"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/description_val" />

			<TextView
				android:id="@+id/availability_val"
				app:layout_constraintTop_toBottomOf="@id/description_val"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/usual_margin"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<Space
		android:id="@+id/leftspacer"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@id/info_lower_space"
		app:layout_constraintLeft_toLeftOf="parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/lower-button-holder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/info_lower_space"
		app:layout_constraintLeft_toRightOf="@id/leftspacer"
		app:layout_constraintRight_toLeftOf="@id/rightspacer">

		<Button
			android:id="@+id/borrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/borrow"
			android:textAllCaps="false"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toLeftOf="@id/middlespacer" />

		<Space
			android:id="@+id/middlespacer"
			android:layout_width="25dp"
			android:layout_height="0dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/borrow"
			app:layout_constraintTop_toTopOf="parent" />

		<!--TODO: Make a trashcan icon-->
		<Button
			android:id="@+id/delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_stock"
			android:textAllCaps="false"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/middlespacer" />
		<Space
			android:id="@+id/space2"
			android:layout_width="25dp"
			android:layout_height="match_parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/delete"/>
		<Button
			android:id="@+id/edit_product"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/space2"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<Space
		android:id="@+id/rightspacer"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@id/info_lower_space"
		app:layout_constraintRight_toRightOf="parent" />

	<Space
		android:id="@+id/info_lower_space"
		android:layout_width="match_parent"
		android:layout_height="@dimen/login_edittext_vertical_margin"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintLeft_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>