<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Fragments.loginFragment">
	<EditText
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/username_input"
		android:inputType="textPersonName"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="@dimen/login_edittext_horizontal_margin"
		android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
		android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
		android:layout_marginTop="@dimen/login_edittext_vertical_margin"/>
	<EditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPassword"
		android:hint="@string/password_input"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/username"
		android:layout_marginStart="@dimen/login_edittext_horizontal_margin"
		android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
		android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
		android:layout_marginTop="@dimen/login_edittext_vertical_margin"/>

	<Button
		android:id="@+id/login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
		android:layout_marginTop="@dimen/login_edittext_vertical_margin"
		android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
		android:text="@string/login"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/password" />
	<android.support.constraint.ConstraintLayout
		android:id="@+id/or"
		app:layout_constraintTop_toBottomOf="@id/login"
		android:layout_width="match_parent"
		android:layout_height="@dimen/login_spacer_height">
		<View
			android:id="@+id/leftorbar"
			android:layout_width="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/ortext"
			android:layout_margin="@dimen/usual_margin"
			android:layout_height="3dp"
			android:background="@color/textBackground"/>
		<TextView
			android:text="@string/or"
			android:gravity="center"
			android:layout_margin="@dimen/usual_margin"
			android:id="@+id/ortext"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/spaceunderor"
			app:layout_constraintLeft_toRightOf="@id/leftorbar"
			app:layout_constraintRight_toLeftOf="@id/rightorbar"
			/>
		<Space
			android:id="@+id/spaceunderor"
			android:layout_width="wrap_content"
			android:layout_height="3dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/leftorbar"
			app:layout_constraintRight_toLeftOf="@id/rightorbar"/>
		<View
			android:id="@+id/rightorbar"
			android:layout_width="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@id/ortext"
			android:layout_margin="@dimen/usual_margin"
			android:layout_height="3dp"
			android:background="@color/textBackground"/>
	</android.support.constraint.ConstraintLayout>

	<Button
		android:id="@+id/register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
		android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
		android:onClick="registerButton"
		android:text="@string/register"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/or" />
</android.support.constraint.ConstraintLayout>